hphp/test/slow/using/bad-name.php.expectf

Fatal error: syntax error, unexpected T_USING in %s/test/slow/using/bad-name.php on line 3
